feat(content): deploy flagship article 2026-se-asia, new video engine v2, and assets

--- a/content_draft.html
+++ b/content_draft.html
@@ -1,74 +1,115 @@
-<h2>「今回は違う」という悪魔の囁き</h2>
-<p>「金（ゴールド）は高すぎる。もう天井だ」。もしあなたがそう感じているなら、それは正常な感覚です。しかし、歴史は残酷な真実を我々に突きつけます。大衆が「高すぎる」と恐れる時こそが、相場の初動であると。</p>
-<p>2026年、我々は40年ぶりに「金利のある世界（Full-return world）」への大転換点（Sea
-    Change）を迎えます。過去40年間、我々は「金利低下」という動く歩道に乗って、ただ立っているだけで資産が増える時代を享受してきました。しかし、そのパーティーは終わりました。</p>
+<h1>【2026年・脱日本】「円」を捨て、東南アジアの「時間」を買え：マニラ・ジョホール・シンガポール不動産戦略</h1>
 
-<div class="expert-box">
-    【30年のプロの眼】
-    ハワード・マークスは言いました。「過去40年の投資戦略は、これからの時代には通用しない」と。
-    多くの投資家は、まだ「インフレは一時的だ」「円安は戻る」という希望的観測（Wishful Thinking）にすがっています。
-    しかし、現場の空気は凍りついています。賢明な富裕層はすでに、円という「沈む船」から、ゴールドという「ノアの方舟」へと資産を移し替えています。
-    彼らは知っているのです。中央銀行が輪転機を回し続ける限り、現金の価値は希釈され続けることを。
+<div class="intro">
+    <p>日本人投資家の大半は、今もなお「円」という孤島に閉じ込められている。彼らは円安を一過性の現象と捉え、いずれ反転すると信じている。あるいは、日銀が何らかの手を打ち、状況は好転すると楽観している。しかし、30年にわたり相場のサイクルを見続けてきた者として断言する――「今回は違う」という言葉ほど危険なものはない。そして皮肉なことに、今回もまた「今回は違う」のである。ただし、それは円が強くなるという意味ではない。円の構造的弱体化が、もはや不可逆的な段階に入ったという意味においてだ。
+    </p>
+
+    <p>2025年、日本円は対ドルで155円前後を彷徨っている。JPモルガン、BNPパリバ、福岡フィナンシャルグループといった国内外の金融機関は、2026年末までに160円、あるいは165円への円安進行を予測している。これは願望でも悲観論でもない。金利差、資本流出、キャリートレードの復活という「構造的な力学」が導き出す冷徹な帰結である。
+    </p>
+
+    <p>本稿の目的は明快である。2026年という「タイムリミット」を軸に、資産防衛のための「ノアの方舟」を海外に建造する戦略を提示すること。狙いは東南アジアの成長都市――マニラ、ジョホール、そしてシンガポール。インフラが完成する「その瞬間」に備えよ。これは投機ではない。「時間の購入（Time
+        Arbitrage）」という、極めて合理的な生存戦略である。</p>
 </div>
 
-<h3>「現金＝安全」という致命的な誤解</h3>
-<p>日本人の9割は、未だに「現金はリスクフリー資産」だと信じています。しかし、インフレ率が金利を上回る現状において、現金は「確実に価値が減っていく資産」です。レイ・ダリオが「Cash is
-    Trash（現金はゴミだ）」と断じた背景には、この冷徹な算数があります。</p>
-<p>2026年、日銀が利上げに動いたとしても、インフレ率を上回る「実質プラス金利」を実現することは困難でしょう。それは、国家財政が金利負担に耐えられないからです。つまり、我々は今後長期間にわたり、「実質マイナス金利（Financial
-    Repression）」の世界を生きることになります。</p>
-
-<div class="image-wrapper"><img src="IMAGE_ID_1"
-        alt="Dark stormy ocean with a small glowing ark in the distance (representing gold/safety) amidst rough waves">
+<div class="image-wrapper">
+    <img src="IMAGE_ID_1" alt="Manila Skyline at Dusk, symbolizing growth and opportunity">
 </div>
 
-<h3>ゴールド、5,000ドル時代への序章</h3>
-<p>なぜ今、ゴールドなのか。それは「通貨の死」へのヘッジだからです。米ドルでさえ、その信認が揺らいでいます。世界の中央銀行、特にグローバルサウスの国々は、急速に米国債を売り、ゴールドを買い集めています。「脱ドル化」の流れは不可逆です。
-</p>
-<p>エミン・ユルマズ氏が指摘するように、地政学リスクが高まる世界において、特定の国家の信用に依存しないゴールドは「究極の無国籍通貨」として機能します。2025年までの上昇は序章に過ぎません。2026年、通貨不安が表面化した時、ゴールドは「恐怖指数」として機能し、5,000ドルを目指す展開となるでしょう。
+<h2>第1章：フィリピン（マニラ）――爆発的成長への乗車券</h2>
+
+<p>マニラ首都圏のボニファシオ・グローバル・シティ（BGC）とマカティCBDは、今や東南アジア有数のビジネス地区へと成長を遂げた。かつて軍用地であったBGCは、わずか20年で近代的な摩天楼が立ち並ぶ国際都市へと変貌した。現在、BGCの高級コンドミニアムは1平米あたり23万〜45万ペソ（約60万〜120万円）で取引されており、ロックウェルセンターの最高級物件に至ってはそれ以上だ。しかし、現在の価格は「プロローグ」に過ぎない。
 </p>
 
-<table class="w-full text-left border-collapse my-8 sticky top-0">
+<h3>「地下鉄開通」がもたらす地殻変動</h3>
+<p>フィリピン史上初の地下鉄「メトロ・マニラ・サブウェイ・プロジェクト（MMSP）」――この33キロメートルの巨大インフラが、マニラの都市構造を根底から覆そうとしている。バレンズエラ市からニノイ・アキノ国際空港（NAIA）までを結ぶこの路線は、2029年のPhase
+    1（部分開業）を目指して建設が進んでいる。</p>
+
+<p>現在、バレンズエラからNAIAまで車で1時間30分以上かかる悪名高き渋滞が、地下鉄完成後は35分に短縮される。これは単なる時間短縮ではない。都市の物理的・心理的距離を再定義する「地殻変動」である。日本の高度経済成長期、東海道新幹線や地下鉄網の整備が地価に何をもたらしたかを想起せよ。インフラは富を再配分する装置である。
+</p>
+
+<h3>人口ボーナスとの掛け算</h3>
+<p>フィリピンの中央年齢は25.7歳。日本の48.4歳と比較すれば、その若さは歴然としている。これから労働市場に参入する膨大な若年層がオフィス需要を支え、中間層の拡大が住宅需要を押し上げる。そこに地下鉄という「移動革命」が加わることで、需要と供給の均衡点は不可逆的に上方シフトする。2028-2029年の開通後に参入するのでは、既に遅い。「時間を買う」とは、まさにこのことである。
+</p>
+
+<h2>第2章：ジョホール（マレーシア）――国境裁定取引の妙味</h2>
+
+<p>シンガポールは既に「完成された城」であり、追加印紙税（ABSD）60%の壁は、キャピタルゲインを狙う投資家を拒絶している。真の投資機会は、その城下町となるジョホールバルにある。</p>
+
+<div class="image-wrapper">
+    <img src="IMAGE_ID_2" alt="RTS Link bridge construction between Johor and Singapore at sunrise">
+</div>
+
+<h3>RTSリンク――「国境」を消す革命</h3>
+<p>2026年12月、ジョホールバル・シンガポール高速鉄道システム（RTS Link）が開通予定である。両駅間をわずか5分で結び、1時間あたり1万人を輸送するこのシステムは、シンガポールとジョホールの経済圏を事実上「融合」させる。</p>
+
+<p>現在、ジョホールバル中心部の不動産価格は、シンガポールの同等物件の10分の1以下である。この異常な価格差（歪み）は、これまで「国境越えの渋滞」という物理的障壁によって維持されてきた。RTSリンクはこの障壁を破壊し、強力な価格裁定（アービトラージ）を引き起こす。「シンガポールで稼ぎ、ジョホールで優雅に暮らす」ライフスタイルが現実解となる時、不動産価格の収斂は避けられない。
+</p>
+
+<h3>JS-SEZという追い風</h3>
+<p>さらに、ジョホール・シンガポール経済特区（JS-SEZ）の設立が、企業誘致と人の流れを加速させる。シンガポールの高コストを嫌気した企業がバックオフィスや製造拠点をジョホールに移し、それに伴い駐在員需要も発生する。これは単なるベッドタウン化ではなく、経済圏の一体化である。
+</p>
+
+<h2>第3章：シンガポール――資産の最終要塞</h2>
+
+<p>では、シンガポール不動産は投資対象外か？ 答えは否である。ただし、目的が異なる。ここでは「リターン」ではなく「安全性」を買うのだ。</p>
+
+<div class="image-wrapper">
+    <img src="IMAGE_ID_3" alt="Singapore Marina Bay Sands view, representing stability and wealth">
+</div>
+
+<h3>ポートフォリオの「アンカー（錨）」</h3>
+<p>シンガポールはアジアのスイスであり、法の支配と金融の安定性が極めて高い。円建て資産100%のポートフォリオを持つ日本人にとって、シンガポールドル建て資産を持つことは最強の「保険」となる。最悪のシナリオ――円の急落や日本国債の暴落――が到来した場合、シンガポール資産は避難所（シェルター）として機能する。
+</p>
+<p>ABSDを避けるために、REITや法人を通じた商業不動産投資など、賢明なアプローチ検討すべきだが、重要なのは「資産の一部を安全な場所に置く」という行為そのものである。レイ・ダリオの「オール・ウェザー・ポートフォリオ」の思想に基づき、守りの資産を確保せよ。
+</p>
+
+<h2>結論：資産の「国籍」を変えよ</h2>
+
+<p>2026年は「金利のある世界」への大転換（Sea Change）の年であり、同時に東南アジアのインフラ革命が結実する前夜である。このタイミングを逃せば、安価に「時間」を購入する機会は二度と訪れない。</p>
+
+<ul>
+    <li><strong>マニラ</strong>で「成長」を買う。</li>
+    <li><strong>ジョホール</strong>で「裁定」を買う。</li>
+    <li><strong>シンガポール</strong>で「安全」を買う。</li>
+</ul>
+
+<p>このトライアングルを構築し、沈みゆく「円」という船から、資産の一部だけでも脱出させること。それが、2030年代を生き抜くための唯一の生存戦略である。</p>
+
+<h3>戦略比較テーブル</h3>
+<table border="1" cellspacing="0" cellpadding="10" style="width:100%; border-collapse:collapse; margin-top:20px;">
     <thead>
-        <tr class="bg-primary/10">
-            <th class="p-4 font-serif text-primary border-b border-primary/20">資産クラス</th>
-            <th class="p-4 font-serif text-primary border-b border-primary/20">2026年の性質</th>
-            <th class="p-4 font-serif text-primary border-b border-primary/20">推奨アクション</th>
+        <tr style="background-color:#2c2822; color:#c59f59;">
+            <th>都市</th>
+            <th>投資目的</th>
+            <th>主なリスク</th>
+            <th>推奨エントリー</th>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td class="p-4 border-b border-white/10 font-medium">日本円（現金）</td>
-            <td class="p-4 border-b border-white/10 text-gray-400">確実な購買力低下（インフレ負け）</td>
-            <td class="p-4 border-b border-white/10 text-red-400">生活防衛資金以外は処分</td>
+            <td><strong>マニラ</strong></td>
+            <td>キャピタルゲイン（成長）</td>
+            <td>竣工遅延、プレビルド詐欺</td>
+            <td>地下鉄全線開通（2029）の3年前まで</td>
         </tr>
         <tr>
-            <td class="p-4 border-b border-white/10 font-medium">新築タワマン</td>
-            <td class="p-4 border-b border-white/10 text-gray-400">金利上昇による逆回転リスク、管理費高騰</td>
-            <td class="p-4 border-b border-white/10 text-red-400">早期のエグジット（損切り）</td>
+            <td><strong>ジョホール</strong></td>
+            <td>価格裁定（アービトラージ）</td>
+            <td>政策変更、供給過剰</td>
+            <td>RTS開通（2026年末）直前まで</td>
         </tr>
         <tr>
-            <td class="p-4 border-b border-white/10 font-medium">ゴールド（金）</td>
-            <td class="p-4 border-b border-white/10 text-yellow-500 font-bold">通貨安ヘッジ、有事の際の流動性</td>
-            <td class="p-4 border-b border-white/10 text-green-400 font-bold">ポートフォリオの15-20%まで積み増し</td>
-        </tr>
-        <tr>
-            <td class="p-4 border-b border-white/10 font-medium">都心中古（Vintage）</td>
-            <td class="p-4 border-b border-white/10 text-yellow-500 font-bold">実物資産としての価値保存、インフレ連動</td>
-            <td class="p-4 border-b border-white/10 text-green-400 font-bold">一等地・好管理物件を厳選保有</td>
+            <td><strong>シンガポール</strong></td>
+            <td>資産保全（安全性）</td>
+            <td>高額な税金（ABSD）、低利回り</td>
+            <td>いつでも（資産分散として）</td>
         </tr>
     </tbody>
 </table>
 
-<div class="image-wrapper"><img src="IMAGE_ID_2"
-        alt="A heavy, secure bank vault door opening to reveal gold bars under dramatic lighting context of wealth preservation">
-</div>
-
-<h3>「周りが恐怖に震えている時」こそ動け</h3>
-<p>2026年、もし不動産市場や株式市場がパニックに陥り、投げ売り（Puking）が出た時、あなたはどうしますか？多くの人は恐怖で動けなくなります。しかし、我々「冷徹なストラテジスト」にとっては、それこそが千載一遇の好機です。</p>
-<p>その時、手元に「流動性（Liquidity）」を持っている者だけが、ただ同然の価格で優良資産を拾うことができます。その流動性の源泉となるのが、今仕込んでおくゴールドであり、外貨なのです。</p>
-
-<p>周りが熱狂している今こそ、最も慎重であってください。そして、周りが恐怖に震えている時こそ、最も攻撃的であってください。これが、2026年を生き残る唯一の鉄則です。</p>
-
-<div class="image-wrapper"><img src="IMAGE_ID_3"
-        alt="Abstract conceptual art representing 'Sea Change' or paradigm shift in economics dark turbulent waves turning into golden light">
+<div class="expert-box" style="background-color:#f8f9fa; padding:20px; border-left:5px solid #c59f59; margin-top:30px;">
+    <h3 style="color:#161410; margin-top:0;">【30年のプロの眼】専門家の視点</h3>
+    <p>マニラとジョホールへの投資において最大の鍵は「出口戦略」です。誰に売るのか？
+        マニラであれば成長した現地中間層、ジョホールであればシンガポールからの越境通勤者です。この「実需」が見えないエリアや物件には手を出してはいけません。また、為替リスクをヘッジするため、必ず現地通貨建てのローン活用や、複数通貨での資産保有を意識してください。円安は今後も続く可能性が高いですが、一本足打法はリスクです。
+    </p>
 </div>
