Style: Optimize automatically injected images for mobile

--- a/content_draft.html
+++ b/content_draft.html
@@ -1,115 +1,89 @@
-<h1>【2026年・脱日本】「円」を捨て、東南アジアの「時間」を買え：マニラ・ジョホール・シンガポール不動産戦略</h1>
-
-<div class="intro">
-    <p>日本人投資家の大半は、今もなお「円」という孤島に閉じ込められている。彼らは円安を一過性の現象と捉え、いずれ反転すると信じている。あるいは、日銀が何らかの手を打ち、状況は好転すると楽観している。しかし、30年にわたり相場のサイクルを見続けてきた者として断言する――「今回は違う」という言葉ほど危険なものはない。そして皮肉なことに、今回もまた「今回は違う」のである。ただし、それは円が強くなるという意味ではない。円の構造的弱体化が、もはや不可逆的な段階に入ったという意味においてだ。
-    </p>
-
-    <p>2025年、日本円は対ドルで155円前後を彷徨っている。JPモルガン、BNPパリバ、福岡フィナンシャルグループといった国内外の金融機関は、2026年末までに160円、あるいは165円への円安進行を予測している。これは願望でも悲観論でもない。金利差、資本流出、キャリートレードの復活という「構造的な力学」が導き出す冷徹な帰結である。
-    </p>
-
-    <p>本稿の目的は明快である。2026年という「タイムリミット」を軸に、資産防衛のための「ノアの方舟」を海外に建造する戦略を提示すること。狙いは東南アジアの成長都市――マニラ、ジョホール、そしてシンガポール。インフラが完成する「その瞬間」に備えよ。これは投機ではない。「時間の購入（Time
-        Arbitrage）」という、極めて合理的な生存戦略である。</p>
-</div>
-
-<div class="image-wrapper">
-    <img src="IMAGE_ID_1" alt="Manila Skyline at Dusk, symbolizing growth and opportunity">
-</div>
-
-<h2>第1章：フィリピン（マニラ）――爆発的成長への乗車券</h2>
-
-<p>マニラ首都圏のボニファシオ・グローバル・シティ（BGC）とマカティCBDは、今や東南アジア有数のビジネス地区へと成長を遂げた。かつて軍用地であったBGCは、わずか20年で近代的な摩天楼が立ち並ぶ国際都市へと変貌した。現在、BGCの高級コンドミニアムは1平米あたり23万〜45万ペソ（約60万〜120万円）で取引されており、ロックウェルセンターの最高級物件に至ってはそれ以上だ。しかし、現在の価格は「プロローグ」に過ぎない。
+<h2 id="heading-1">「年収2000万円」でも超えられない壁</h2>
+<p>「なぜ、融資が通らないのですか？」</p>
+<p>目の前に座る30代後半のエリートサラリーマンは、困惑の表情を隠せない。大手総合商社勤務、年収1800万円。妻も大手企業勤務で世帯年収は2500万円を超える。文句なしの「パワーカップル」だ。彼らは都心の一等地に1.5億円のタワーマンションを購入し、優雅な生活を送っている。
 </p>
-
-<h3>「地下鉄開通」がもたらす地殻変動</h3>
-<p>フィリピン史上初の地下鉄「メトロ・マニラ・サブウェイ・プロジェクト（MMSP）」――この33キロメートルの巨大インフラが、マニラの都市構造を根底から覆そうとしている。バレンズエラ市からニノイ・アキノ国際空港（NAIA）までを結ぶこの路線は、2029年のPhase
-    1（部分開業）を目指して建設が進んでいる。</p>
-
-<p>現在、バレンズエラからNAIAまで車で1時間30分以上かかる悪名高き渋滞が、地下鉄完成後は35分に短縮される。これは単なる時間短縮ではない。都市の物理的・心理的距離を再定義する「地殻変動」である。日本の高度経済成長期、東海道新幹線や地下鉄網の整備が地価に何をもたらしたかを想起せよ。インフラは富を再配分する装置である。
+<p>しかし、彼らが「資産形成」のために2戸目の不動産——投資用マンションを買おうとした瞬間、銀行の扉は冷酷に閉ざされた。</p>
+<p>「お客様の場合、これ以上の借入は難しい状況です」</p>
+<p>これが、不動産投資における最大の罠、**「2戸目の壁」**である。多くのエリートたちは、最初の自宅購入で「属性（与信枠）」という貴重な資源を使い果たしてしまう。銀行にとって、あなたの年収は無限の泉ではない。既存の住宅ローンは、純粋な「負債」としてカウントされ、次の投資機会を物理的に奪うのだ。
 </p>
+<p>本稿では、この「2戸目の壁」のメカニズムと、それを突破するための冷徹な戦略を解説する。これは、単なるローンの話ではない。あなたの人生における「資産」と「負債」のバランスシートを再定義する戦いである。</p>
 
-<h3>人口ボーナスとの掛け算</h3>
-<p>フィリピンの中央年齢は25.7歳。日本の48.4歳と比較すれば、その若さは歴然としている。これから労働市場に参入する膨大な若年層がオフィス需要を支え、中間層の拡大が住宅需要を押し上げる。そこに地下鉄という「移動革命」が加わることで、需要と供給の均衡点は不可逆的に上方シフトする。2028-2029年の開通後に参入するのでは、既に遅い。「時間を買う」とは、まさにこのことである。
-</p>
+<div class="image-wrapper"><img src="IMAGE_ID_1"
+        alt="Bank negotiation room, elite businessman looking stressed, dark cinematic lighting"></div>
 
-<h2>第2章：ジョホール（マレーシア）――国境裁定取引の妙味</h2>
-
-<p>シンガポールは既に「完成された城」であり、追加印紙税（ABSD）60%の壁は、キャピタルゲインを狙う投資家を拒絶している。真の投資機会は、その城下町となるジョホールバルにある。</p>
-
-<div class="image-wrapper">
-    <img src="IMAGE_ID_2" alt="RTS Link bridge construction between Johor and Singapore at sunrise">
-</div>
-
-<h3>RTSリンク――「国境」を消す革命</h3>
-<p>2026年12月、ジョホールバル・シンガポール高速鉄道システム（RTS Link）が開通予定である。両駅間をわずか5分で結び、1時間あたり1万人を輸送するこのシステムは、シンガポールとジョホールの経済圏を事実上「融合」させる。</p>
-
-<p>現在、ジョホールバル中心部の不動産価格は、シンガポールの同等物件の10分の1以下である。この異常な価格差（歪み）は、これまで「国境越えの渋滞」という物理的障壁によって維持されてきた。RTSリンクはこの障壁を破壊し、強力な価格裁定（アービトラージ）を引き起こす。「シンガポールで稼ぎ、ジョホールで優雅に暮らす」ライフスタイルが現実解となる時、不動産価格の収斂は避けられない。
-</p>
-
-<h3>JS-SEZという追い風</h3>
-<p>さらに、ジョホール・シンガポール経済特区（JS-SEZ）の設立が、企業誘致と人の流れを加速させる。シンガポールの高コストを嫌気した企業がバックオフィスや製造拠点をジョホールに移し、それに伴い駐在員需要も発生する。これは単なるベッドタウン化ではなく、経済圏の一体化である。
-</p>
-
-<h2>第3章：シンガポール――資産の最終要塞</h2>
-
-<p>では、シンガポール不動産は投資対象外か？ 答えは否である。ただし、目的が異なる。ここでは「リターン」ではなく「安全性」を買うのだ。</p>
-
-<div class="image-wrapper">
-    <img src="IMAGE_ID_3" alt="Singapore Marina Bay Sands view, representing stability and wealth">
-</div>
-
-<h3>ポートフォリオの「アンカー（錨）」</h3>
-<p>シンガポールはアジアのスイスであり、法の支配と金融の安定性が極めて高い。円建て資産100%のポートフォリオを持つ日本人にとって、シンガポールドル建て資産を持つことは最強の「保険」となる。最悪のシナリオ――円の急落や日本国債の暴落――が到来した場合、シンガポール資産は避難所（シェルター）として機能する。
-</p>
-<p>ABSDを避けるために、REITや法人を通じた商業不動産投資など、賢明なアプローチ検討すべきだが、重要なのは「資産の一部を安全な場所に置く」という行為そのものである。レイ・ダリオの「オール・ウェザー・ポートフォリオ」の思想に基づき、守りの資産を確保せよ。
-</p>
-
-<h2>結論：資産の「国籍」を変えよ</h2>
-
-<p>2026年は「金利のある世界」への大転換（Sea Change）の年であり、同時に東南アジアのインフラ革命が結実する前夜である。このタイミングを逃せば、安価に「時間」を購入する機会は二度と訪れない。</p>
-
+<h2 id="heading-2">属性という「見えない通貨」の枯渇</h2>
+<p>銀行が融資審査を行う際、最も重視するのは「返済比率」である。一般的に、年収に対する年間返済額の割合が30〜35％を超えると、融資はストップする。</p>
+<p>ここで、典型的な失敗例を見てみよう。</p>
 <ul>
-    <li><strong>マニラ</strong>で「成長」を買う。</li>
-    <li><strong>ジョホール</strong>で「裁定」を買う。</li>
-    <li><strong>シンガポール</strong>で「安全」を買う。</li>
+    <li><strong>年収：</strong> 1500万円</li>
+    <li><strong>自宅ローン：</strong> 1.2億円（ペアローン、変動0.4%）</li>
+    <li><strong>年間返済額：</strong> 約420万円（金利上昇リスク加味前）</li>
 </ul>
+<p>表面的には返済比率28%程度に見えるが、銀行は審査金利（3〜4%）でストレスをかけて計算する。その瞬間、この属性は「満額」と判断される。つまり、彼は自覚なきままに、自身の信用力をすべて自宅（収益を生まない資産）にロックしてしまったのだ。
+</p>
 
-<p>このトライアングルを構築し、沈みゆく「円」という船から、資産の一部だけでも脱出させること。それが、2030年代を生き抜くための唯一の生存戦略である。</p>
+<div class="expert-box">
+    【30年のプロの眼】自宅は「最後の買い物」であるべきだ。<br>多くの人は順書を間違えている。まず自宅を買い、余力で投資をしようとする。これは戦略的敗北だ。真の資産家は、まず「収益を生む物件（投資用）」に属性を使い、そのキャッシュフローで自宅のローンを相殺する。順番が逆なのだ。「見栄」のために属性を使うな。「富」のために使え。
+</div>
 
-<h3>戦略比較テーブル</h3>
-<table border="1" cellspacing="0" cellpadding="10" style="width:100%; border-collapse:collapse; margin-top:20px;">
+<h2 id="heading-3">突破のプロトコル：法人化と「損益通算」の虚像</h2>
+<p>では、すでに自宅を買ってしまった者は絶望するしかないのか？ 答えはNoだが、道は狭い。</p>
+<h3 id="heading-3-1">戦略A：個人バランスシートの「圧縮」</h3>
+<p>最も確実なのは、自宅ローンの残債を減らすことだ。しかし、キャッシュで繰り上げ返済をしては手元流動性が死ぬ。ここで有効なのが、自宅を「賃貸併用住宅」と見なせるようなスキーム（適法な範囲での自宅一部賃貸など）だが、タワマンでは不可能だ。
+</p>
+<p>現実的な解は、保有している「低収益資産」の売却である。車、保険、そしてリターンを生まない金融商品。これらを現金化し、負債を圧縮する。外科手術のような痛みを伴うが、これができなければ次は無い。</p>
+
+<h3 id="heading-3-2">戦略B：法人（マイクロ法人）という別人格</h3>
+<p>個人の属性が死んでいるなら、別の人格（法人）を作る。これが王道だ。しかし、設立したばかりのペーパーカンパニーにプロパー融資を出す地銀は少ない。ここで重要になるのが「実績（トラックレコード）」だ。</p>
+<p>最初は公庫（日本政策金融公庫）の無担保融資などを活用し、築古戸建てや小型アパートなどの「高利回り・低価格」な物件を買う。そこで確実に黒字決済を出し、銀行に「経営能力」を証明する。個人の属性（給与所得）ではなく、事業の収益性（PL/BS）で勝負する土俵へ移るのだ。
+</p>
+
+<table class="w-full my-8 border-collapse border border-white/10 text-sm">
     <thead>
-        <tr style="background-color:#2c2822; color:#c59f59;">
-            <th>都市</th>
-            <th>投資目的</th>
-            <th>主なリスク</th>
-            <th>推奨エントリー</th>
+        <tr class="bg-white/5 text-accent">
+            <th class="p-4 border-b border-white/10 text-left">比較項目</th>
+            <th class="p-4 border-b border-white/10 text-left">個人投資（サラリーマン）</th>
+            <th class="p-4 border-b border-white/10 text-left">法人投資（事業家）</th>
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td><strong>マニラ</strong></td>
-            <td>キャピタルゲイン（成長）</td>
-            <td>竣工遅延、プレビルド詐欺</td>
-            <td>地下鉄全線開通（2029）の3年前まで</td>
+        <tr class="border-b border-white/5">
+            <td class="p-4 text-gray-300"><strong>融資の上限</strong></td>
+            <td class="p-4 text-gray-400">年収の10〜15倍で頭打ち</td>
+            <td class="p-4 text-gray-400">事業の収益性が続く限り無限</td>
+        </tr>
+        <tr class="border-b border-white/5">
+            <td class="p-4 text-gray-300"><strong>金利条件</strong></td>
+            <td class="p-4 text-gray-400">アパートローン（低〜中）</td>
+            <td class="p-4 text-gray-400">プロパー融資（交渉次第）</td>
+        </tr>
+        <tr class="border-b border-white/5">
+            <td class="p-4 text-gray-300"><strong>節税効果</strong></td>
+            <td class="p-4 text-gray-400">限定的（損益通算のみ）</td>
+            <td class="p-4 text-gray-400">広範（経費、役員報酬、退職金）</td>
         </tr>
         <tr>
-            <td><strong>ジョホール</strong></td>
-            <td>価格裁定（アービトラージ）</td>
-            <td>政策変更、供給過剰</td>
-            <td>RTS開通（2026年末）直前まで</td>
-        </tr>
-        <tr>
-            <td><strong>シンガポール</strong></td>
-            <td>資産保全（安全性）</td>
-            <td>高額な税金（ABSD）、低利回り</td>
-            <td>いつでも（資産分散として）</td>
+            <td class="p-4 text-gray-300"><strong>銀行の評価</strong></td>
+            <td class="p-4 text-gray-400">「属性」を見る</td>
+            <td class="p-4 text-gray-400">「決算書」を見る</td>
         </tr>
     </tbody>
 </table>
 
-<div class="expert-box" style="background-color:#f8f9fa; padding:20px; border-left:5px solid #c59f59; margin-top:30px;">
-    <h3 style="color:#161410; margin-top:0;">【30年のプロの眼】専門家の視点</h3>
-    <p>マニラとジョホールへの投資において最大の鍵は「出口戦略」です。誰に売るのか？
-        マニラであれば成長した現地中間層、ジョホールであればシンガポールからの越境通勤者です。この「実需」が見えないエリアや物件には手を出してはいけません。また、為替リスクをヘッジするため、必ず現地通貨建てのローン活用や、複数通貨での資産保有を意識してください。円安は今後も続く可能性が高いですが、一本足打法はリスクです。
-    </p>
+<div class="image-wrapper"><img src="IMAGE_ID_2"
+        alt="Contrast between a modern glass office representing 'Asset' and a heavy stone residential building representing 'Liability', balanced on a scale">
 </div>
+
+<h2 id="heading-4">2026年、銀行の選別はさらに厳格化する</h2>
+<p>レイ・ダリオが警告する「債務サイクル」の終わりが近づいている。金利上昇局面において、銀行は「貸せる人」と「貸せない人」の線引きを露骨に変更する。</p>
+<p>これまでのように「上場企業勤務ならフリーパス」という時代は終わる。銀行が見るのは、企業の看板ではなく、あなた個人の<strong>「純資産（Net
+        Worth）」</strong>と<strong>「キャッシュフロー生成力」</strong>だ。自宅という巨大な負債を抱え、給与という単一のキャッシュフローに依存する者は、リスクが高いと見なされる。</p>
+<p>逆に、小規模でも不動産からのインカムゲインを持ち、複数の収入源を持つ者は、銀行にとって「安全な貸出先」となる。</p>
+
+<div class="image-wrapper"><img src="IMAGE_ID_3"
+        alt="Future Tokyo skyline with storm clouds approaching, representing the 2026 market shift"></div>
+
+<h2 id="heading-5">結論：属性の「リストラ」を断行せよ</h2>
+<p>2戸目の壁を超えられないのは、壁が高いからではない。あなたの荷物（自宅ローン）が重すぎるからだ。</p>
+<p>もしあなたが本気で資産形成を目指すなら、今の自宅を売却して賃貸に戻り、属性をすべて投資に振り向ける選択肢すら検討すべきだ。それは「都落ち」ではない。戦略的撤退であり、勝つための助走だ。</p>
+<p>2026年、金利ある世界が到来したとき、借金（レバレッジ）は「諸刃の剣」となる。無防備に自宅ローンを抱えたままの者は、剣に倒れる。戦略的に負債をコントロールできる者だけが、この剣を武器として振るうことができるのだ。</p>
